--- a/Views/Invites/ProcessInvite.cshtml
+++ b/Views/Invites/ProcessInvite.cshtml
@@ -34,7 +34,9 @@
 
         <!-- logo -->
         <div id="logo">
-            <img src="../../assets/media/image/dark-logo.png" alt="image">
+            <a asp-controller="Home" asp-action="Index">
+                <img src="../../assets/media/image/dark-logo.png" alt="image">
+            </a>
         </div>
         <!-- ./ logo -->
 
