Fixed edit page

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -734,7 +734,7 @@
                                     if (User.IsInRole(nameof(BTRoles.Admin)))
                                     {
                                         <li>
-                                            <a asp-controller="Company" asp-action="Index">Manage Users</a>
+                                            <a asp-controller="Company" asp-action="ManageUserRoles">Manage Users</a>
                                             <a asp-controller="Invites" asp-action="Create">Invite Users</a>
                                         </li>
                                     }
