--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -372,7 +372,7 @@
                                 let tableData2 = document.createElement("td");
                                 let tableData3 = document.createElement("td");
                                 tableData.innerHTML = ticket.title;
-                                tableData2.innerHTML = 'Full Name';
+                                tableData2.innerHTML = ticket.developerUser.fullName;
                                 tableData3.innerHTML = ticket.archived ? "Archived" : "Active";
                                 tableRow.appendChild(tableData);
                                 tableRow.appendChild(tableData2);
